workloads/medium-place/vikunja/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: vikunja
  namespace: medium-place
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/name: vikunja
    app.kubernetes.io/part-of: vikunja

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - laundry.medium.place
      secretName: laundry.medium.place-tls

  rules:
    - host: laundry.medium.place
      http:
        paths:
          - pathType: Prefix
            path: /(api|dav|\.well-known)/
            backend:
              service:
                name: vikunja-backend
                port:
                  name: http
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vikunja-frontend
                port:
                  name: http
